--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "contact-keeper",
   "version": "1.0.0",
-  "description": "Contact manger app",
+  "description": "Contact manager app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -25,5 +25,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
